// authenticator.proto

syntax = "proto3";

option go_package = "internal/proto/authenticator";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc AuthenticateSession (AuthenticateSessionRequest) returns (AuthenticateSessionResponse);
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse);
  rpc DeleteSession (DeleteSessionRequest) returns (DeleteSessionResponse);
}

enum ErrorCode {
  OK = 0;
  USER_ALREADY_EXISTS = 1;
  INVALID_SESSION = 2;
  USER_NOT_FOUND = 3;
  INVALID_CREDENTIALS = 4;
  INTERNAL_ERROR = 5;
  SESSION_NOT_FOUND = 6;
  SESSION_EXPIRED = 7;
  INVALID_SESSION_ID = 8;
  INVALID_USERNAME = 9;
  INVALID_PASSWORD = 10;
  FAILED_TO_ACQUIRE_LOCK = 11;
  FAILED_TO_CREATE_USER = 12;
  FAILED_TO_CREATE_SESSION = 13;
}


message Error {
  ErrorCode code = 1;
  string message = 2;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  Error error = 1;
}

message AuthenticateSessionRequest {
  string session_id = 1;
}

message AuthenticateSessionResponse {
  UserSession user_session = 1;
  Error error = 2;
}

message CreateSessionRequest {
  string username = 1;
  string password = 2;
}

message CreateSessionResponse {
  string session_id = 1;
  Error error = 2;
}

message DeleteSessionRequest {
  string session_id = 1;
}

message DeleteSessionResponse {
  Error error = 1;
}

message DBUser {
  int32 id = 1;
  string username = 2;
  string hash_salt_password = 3;
}

message UserSession {
  int32 id = 1;
}